[ios] Fix VoiceOver Issues in Tabgrid

- Updates _currentPage properly in response to 3-finger accessibility swipe. This will now properly read out the currently visible page if a user swipes to a different page.
- Ensures that only the currently visible page's elements can be selected in the scroll view. This resolves an issue VoiceOver was having with what page to readout and to focus on. Oftentimes the visible page was not readout or selectable.

Video: https://drive.google.com/open?id=1Q62MUlrVcNlqnFIQOfw_YiGHinTKb_45

Bug: 880079
Change-Id: I0696786292bec375af9d5326a790700000114559
Reviewed-on: https://chromium-review.googlesource.com/1221474
Commit-Queue: Chris Lu <thegreenfrog@chromium.org>
Reviewed-by: Mark Cogan <marq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592818}
Former-commit-id: fbe67a9526a8ada8ab37b2ce9e7b66dd5a39cdae